V2.3.next
----------------------------------------------------------------------------------------------------
 * Fix lowercasing of filenames
 * Improved format of Managed Certificate Status
 * Provide fallback certificates for all key types requested in MDPrivateKeys

v2.3.0 (BETA)
----------------------------------------------------------------------------------------------------
 * MDPrivateKeys checks for duplicate key specifications. There can only be one RSA key
   and a curve name can also only appear once.
 * Test case for curve "x25519" is being skipped as this key does not work correctly - yet.
 * Added more EC and dual keys tests. Tests now verify that the correct certificate is
   used when the client is limited in protocol version and ciphers.
 * Tests run with multiple certificates. Certificates are listed in status reports. The
   "server-status" html table gives individual links. Expiry durations are aggregated.
   OCSP stapling picks up the new certificates nicely.
 * The JSON format for reporting certificates changed, not sure if it stays now as it
   is or if there should be come backward compat with 1 cert use.
 * MDPrivateKeys allows the specification of several types. Beside "RSA" plus optional
   key lengths elliptic curves can be configured. Right now, the module only creates a
   certificate for the first key type given.
 * Test cases added for "secp256r1" and "secp384r1" which are supported by Let's Encrypt.

v2.2.7
----------------------------------------------------------------------------------------------------
 * Prefer MDContactEmail directive to ServerAdmin for registration. New directive
   thanks for Timothe Litt (@tlhackque).
 * Distribute a2md.xml and conditionally build it, if xmlto is available. Addition
   by Joe Orton (@notroj).

v2.2.6
----------------------------------------------------------------------------------------------------
 * Michal Karm Babacek (@Karm) added `cmake` support, especially valuable under Windows.